--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cryptobackend",
+  "name": "crypto-db",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc --build",
     "start": "node dist/index.js",
-    "setup": "npm i && npm run build && pm2 start --name crypto-currency-db npm -- start --update-env --time && pm2 save",
-    "deploy": "git pull --no-rebase && npm run build && pm2 restart crypto-currency-db --update-env --time && pm2 save"
+    "setup": "npm i && npm run build && pm2 start --name crypto-db npm -- start --update-env --time && pm2 save",
+    "deploy": "git pull --no-rebase && npm run build && pm2 restart crypto-db --update-env --time && pm2 save"
   },
   "nodemonConfig": {
     "watch": [
